Fix layout logo alignment

--- a/src/css/components/general.sass
+++ b/src/css/components/general.sass
@@ -1,3 +1,7 @@
+@media (min-width: $breakpoint-lg-min)
+	.q-layout-padding
+		padding: 16px
+
 .full-page-loader
 	position: fixed
 	left: 0
